# DNN_demo

./: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  optimizer.cpp  optimizer.h  read_mnist.cpp  read_mnist.h  utils.cpp  utils.h
